codex-rs/core/tests/suite/snapshots/all__suite__compact_remote__remote_compact_resume_uses_latest_same_turn_turn_context_item_shapes.snap
---
source: core/tests/suite/compact_remote.rs
expression: "format_labeled_requests_snapshot(\"After /compact and resume, replay should rebuild previous-turn settings from the last TurnContext snapshot within the compacted turn. Here the earlier snapshot was realtime-active but the later same-turn snapshot was inactive, so the resumed request should not emit a stale realtime-end instruction.\",\n&[(\"Remote Compaction Request\", &compact_request),\n(\"Remote Post-Resume History Layout\", after_resume_request),])"
---
Scenario: After /compact and resume, replay should rebuild previous-turn settings from the last TurnContext snapshot within the compacted turn. Here the earlier snapshot was realtime-active but the later same-turn snapshot was inactive, so the resumed request should not emit a stale realtime-end instruction.

## Remote Compaction Request
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user[2]:
    [01] <AGENTS_MD>
    [02] <ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/developer:<realtime_conversation>\nRealtime conversation started.\n\nYou a...
03:message/user:USER_ONE
04:message/assistant:REMOTE_FIRST_REPLY

## Remote Post-Resume History Layout
00:compaction:encrypted=true
01:message/developer:<PERMISSIONS_INSTRUCTIONS>
02:message/user[2]:
    [01] <AGENTS_MD>
    [02] <ENVIRONMENT_CONTEXT:cwd=<CWD>>
03:message/user:USER_TWO
